# sd-bench

./: .gitignore  README.md  modal_app.py  plan.md  pyproject.toml  summary.md
assets/: combined.css  index.html  shared.css
configs/: alpaca_qwen8b_draft_short.json  alpaca_qwen8b_vanilla_short.json  easy_qwen8b_draft_obvious_long.json  easy_qwen8b_draft_obvious_long_2gpu.json  easy_qwen8b_prompt_lookup_obvious_long.json  easy_qwen8b_vanilla_obvious_long.json  easy_qwen_draft_obvious.json  easy_qwen_draft_obvious_long.json  easy_qwen_vanilla_obvious.json  easy_qwen_vanilla_obvious_long.json  proposal_qwen_autoregressive.json  smoke_gpt2.json  spider_qwen8b_draft.json  spider_qwen8b_prompt_lookup.json  spider_qwen8b_suffix.json  spider_qwen8b_suffix_global.json  spider_qwen8b_suffix_local.json  spider_qwen8b_tree_spec.json  spider_qwen8b_tree_spec_test.json  spider_qwen8b_vanilla.json  swebench_qwen8b_draft.json  swebench_qwen8b_prompt_lookup.json  swebench_qwen8b_suffix.json  swebench_qwen8b_suffix_global.json  swebench_qwen8b_suffix_local.json  swebench_qwen8b_tree_spec.json  swebench_qwen8b_vanilla.json  terminalbench_qwen8b_draft.json  terminalbench_qwen8b_prompt_lookup.json  terminalbench_qwen8b_suffix.json  terminalbench_qwen8b_suffix_global.json  terminalbench_qwen8b_suffix_local.json  terminalbench_qwen8b_tree_spec.json  terminalbench_qwen8b_vanilla.json  wildchat_qwen8b_draft_code.json  wildchat_qwen8b_draft_transforms.json  wildchat_qwen8b_draft_translate.json  wildchat_qwen8b_draft_translate_2gpu.json  wildchat_qwen8b_prompt_lookup_code.json  (+31 more)
scripts/: bench
(+28 files in other folders)
